{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 2246,
  "lineage": "fe1182de-6cf1-0f07-da3e-f5b199094b15",
  "resources": [
    {
      "mode": "data",
      "type": "kubernetes_ingress_v1",
      "name": "internal_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mobileapp/internal-app-ingress",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/load-balancer-name": "k8s-mobileap-internal-63a6eb7efe",
                  "alb.ingress.kubernetes.io/scheme": "internal",
                  "alb.ingress.kubernetes.io/target-type": "ip",
                  "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"networking.k8s.io/v1\",\"kind\":\"Ingress\",\"metadata\":{\"annotations\":{\"alb.ingress.kubernetes.io/load-balancer-name\":\"k8s-mobileap-internal-63a6eb7efe\",\"alb.ingress.kubernetes.io/scheme\":\"internal\",\"alb.ingress.kubernetes.io/target-type\":\"ip\",\"kubernetes.io/ingress.class\":\"alb\"},\"name\":\"internal-app-ingress\",\"namespace\":\"mobileapp\"},\"spec\":{\"ingressClassName\":\"alb\",\"rules\ [...]
                  "kubernetes.io/ingress.class": "alb"
                },
                "generation": 1,
                "labels": {},
                "name": "internal-app-ingress",
                "namespace": "mobileapp",
                "resource_version": "15443",
                "uid": "b44f9d2b-5a94-4db5-96c9-76843f05a36b"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "alb",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "internal-app-svc",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/app-version/check",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "internal-app-svc",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "internal-k8s-mobileap-internal-63a6eb7efe-1963536378.us-east-1.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpce_allow_from_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS worker nodes to reach VPC endpoints (HTTPS)",
            "from_port": 443,
            "id": "sgrule-2583059550",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0fee4cb40803f80b0",
            "security_group_rule_id": "sgr-091bb179fe5885cf9",
            "self": false,
            "source_security_group_id": "sg-0c22506a805ce5d82",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.nodes",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce",
            "module.network_endpoints.aws_vpc_endpoint.ec2messages",
            "module.network_endpoints.aws_vpc_endpoint.ecr_api",
            "module.network_endpoints.aws_vpc_endpoint.ecr_dkr",
            "module.network_endpoints.aws_vpc_endpoint.ecr_public",
            "module.network_endpoints.aws_vpc_endpoint.logs",
            "module.network_endpoints.aws_vpc_endpoint.monitoring",
            "module.network_endpoints.aws_vpc_endpoint.s3",
            "module.network_endpoints.aws_vpc_endpoint.secretsmanager",
            "module.network_endpoints.aws_vpc_endpoint.ssm",
            "module.network_endpoints.aws_vpc_endpoint.ssmmessages",
            "module.network_endpoints.aws_vpc_endpoint.sts"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:security-group/sg-0c22506a805ce5d82",
            "description": "EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c22506a805ce5d82",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster control plane to kubelet",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0423a9532aea0711d"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "aerowise-t1-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "339712886638",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "aerowise-t1-eks-nodes-sg",
              "Project": "aerowise-t1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aerowise-t1-eks-nodes-sg",
              "Project": "aerowise-t1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "sg-0c22506a805ce5d82",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce",
            "module.network_endpoints.aws_vpc_endpoint.ec2messages",
            "module.network_endpoints.aws_vpc_endpoint.ecr_api",
            "module.network_endpoints.aws_vpc_endpoint.ecr_dkr",
            "module.network_endpoints.aws_vpc_endpoint.ecr_public",
            "module.network_endpoints.aws_vpc_endpoint.logs",
            "module.network_endpoints.aws_vpc_endpoint.monitoring",
            "module.network_endpoints.aws_vpc_endpoint.s3",
            "module.network_endpoints.aws_vpc_endpoint.secretsmanager",
            "module.network_endpoints.aws_vpc_endpoint.ssm",
            "module.network_endpoints.aws_vpc_endpoint.ssmmessages",
            "module.network_endpoints.aws_vpc_endpoint.sts"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Worker to cluster HTTPS",
            "from_port": 443,
            "id": "sgrule-4242350068",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0423a9532aea0711d",
            "security_group_rule_id": "sgr-02964a193e42878c7",
            "self": false,
            "source_security_group_id": "sg-0c22506a805ce5d82",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKS_VPC_ResourceController",
            "module.eks.aws_security_group.nodes",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce",
            "module.network_endpoints.aws_vpc_endpoint.ec2messages",
            "module.network_endpoints.aws_vpc_endpoint.ecr_api",
            "module.network_endpoints.aws_vpc_endpoint.ecr_dkr",
            "module.network_endpoints.aws_vpc_endpoint.ecr_public",
            "module.network_endpoints.aws_vpc_endpoint.logs",
            "module.network_endpoints.aws_vpc_endpoint.monitoring",
            "module.network_endpoints.aws_vpc_endpoint.s3",
            "module.network_endpoints.aws_vpc_endpoint.secretsmanager",
            "module.network_endpoints.aws_vpc_endpoint.ssm",
            "module.network_endpoints.aws_vpc_endpoint.ssmmessages",
            "module.network_endpoints.aws_vpc_endpoint.sts"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_to_nodes_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster control plane to kubelet",
            "from_port": 10250,
            "id": "sgrule-4247257435",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0c22506a805ce5d82",
            "security_group_rule_id": "sgr-09e46eb38854c5ae1",
            "self": false,
            "source_security_group_id": "sg-0423a9532aea0711d",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKS_VPC_ResourceController",
            "module.eks.aws_security_group.nodes",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce",
            "module.network_endpoints.aws_vpc_endpoint.ec2messages",
            "module.network_endpoints.aws_vpc_endpoint.ecr_api",
            "module.network_endpoints.aws_vpc_endpoint.ecr_dkr",
            "module.network_endpoints.aws_vpc_endpoint.ecr_public",
            "module.network_endpoints.aws_vpc_endpoint.logs",
            "module.network_endpoints.aws_vpc_endpoint.monitoring",
            "module.network_endpoints.aws_vpc_endpoint.s3",
            "module.network_endpoints.aws_vpc_endpoint.secretsmanager",
            "module.network_endpoints.aws_vpc_endpoint.ssm",
            "module.network_endpoints.aws_vpc_endpoint.ssmmessages",
            "module.network_endpoints.aws_vpc_endpoint.sts"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_to_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node",
            "from_port": 0,
            "id": "sgrule-1626809435",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0c22506a805ce5d82",
            "security_group_rule_id": "sgr-073c59b96db82e80d",
            "self": false,
            "source_security_group_id": "sg-0c22506a805ce5d82",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.nodes",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce",
            "module.network_endpoints.aws_vpc_endpoint.ec2messages",
            "module.network_endpoints.aws_vpc_endpoint.ecr_api",
            "module.network_endpoints.aws_vpc_endpoint.ecr_dkr",
            "module.network_endpoints.aws_vpc_endpoint.ecr_public",
            "module.network_endpoints.aws_vpc_endpoint.logs",
            "module.network_endpoints.aws_vpc_endpoint.monitoring",
            "module.network_endpoints.aws_vpc_endpoint.s3",
            "module.network_endpoints.aws_vpc_endpoint.secretsmanager",
            "module.network_endpoints.aws_vpc_endpoint.ssm",
            "module.network_endpoints.aws_vpc_endpoint.ssmmessages",
            "module.network_endpoints.aws_vpc_endpoint.sts"
          ]
        }
      ]
    },
    {
      "module": "module.nat_egress_control",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nategress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:security-group/sg-082ea6f3e7e6fe964",
            "description": "Restricted NAT egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082ea6f3e7e6fe964",
            "ingress": [],
            "name": "aerowise-t1-nat-egress-2025122803084472350000000c",
            "name_prefix": "aerowise-t1-nat-egress-",
            "owner_id": "339712886638",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "aerowise-t1-nat-egress"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aerowise-t1-nat-egress"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "sg-082ea6f3e7e6fe964",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0895ea14959d40ae3",
            "arn": "arn:aws:ec2:us-east-1:339712886638:elastic-ip/eipalloc-0895ea14959d40ae3",
            "association_id": "eipassoc-0522b4ff7b15352b1",
            "domain": "vpc",
            "id": "eipalloc-0895ea14959d40ae3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-009712ceda782379b",
            "private_dns": "ip-10-0-1-35.ec2.internal",
            "private_ip": "10.0.1.35",
            "public_dns": "ec2-3-225-136-88.compute-1.amazonaws.com",
            "public_ip": "3.225.136.88",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "aerowise-t1-nat-a-eip"
            },
            "tags_all": {
              "Name": "aerowise-t1-nat-a-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b27333f288c6e45",
            "arn": "arn:aws:ec2:us-east-1:339712886638:elastic-ip/eipalloc-03b27333f288c6e45",
            "association_id": "eipassoc-00670c8d15c2fa8f0",
            "domain": "vpc",
            "id": "eipalloc-03b27333f288c6e45",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d062c49cf3434c33",
            "private_dns": "ip-10-0-2-55.ec2.internal",
            "private_ip": "10.0.2.55",
            "public_dns": "ec2-3-213-117-114.compute-1.amazonaws.com",
            "public_ip": "3.213.117.114",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "aerowise-t1-nat-b-eip"
            },
            "tags_all": {
              "Name": "aerowise-t1-nat-b-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:internet-gateway/igw-0e91adf551f04ed6f",
            "id": "igw-0e91adf551f04ed6f",
            "owner_id": "339712886638",
            "region": "us-east-1",
            "tags": {
              "Name": "aerowise-t1-igw"
            },
            "tags_all": {
              "Name": "aerowise-t1-igw"
            },
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0895ea14959d40ae3",
            "association_id": "eipassoc-0522b4ff7b15352b1",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-01487500b20147c34",
            "network_interface_id": "eni-009712ceda782379b",
            "private_ip": "10.0.1.35",
            "public_ip": "3.225.136.88",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-040508a7224118551",
            "tags": {
              "Name": "aerowise-t1-nat-a"
            },
            "tags_all": {
              "Name": "aerowise-t1-nat-a"
            },
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b27333f288c6e45",
            "association_id": "eipassoc-00670c8d15c2fa8f0",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-09baa0ce5d1b72688",
            "network_interface_id": "eni-0d062c49cf3434c33",
            "private_ip": "10.0.2.55",
            "public_ip": "3.213.117.114",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05c29cc4ed9d2be74",
            "tags": {
              "Name": "aerowise-t1-nat-b"
            },
            "tags_all": {
              "Name": "aerowise-t1-nat-b"
            },
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:route-table/rtb-0c903f3aa9a8e5a47",
            "id": "rtb-0c903f3aa9a8e5a47",
            "owner_id": "339712886638",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01487500b20147c34",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aerowise-t1-private-rtb-a"
            },
            "tags_all": {
              "Name": "aerowise-t1-private-rtb-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "rtb-0c903f3aa9a8e5a47",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:route-table/rtb-08f34a08baed6947d",
            "id": "rtb-08f34a08baed6947d",
            "owner_id": "339712886638",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09baa0ce5d1b72688",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aerowise-t1-private-rtb-b"
            },
            "tags_all": {
              "Name": "aerowise-t1-private-rtb-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "rtb-08f34a08baed6947d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:route-table/rtb-0d7cbc8cc8095c870",
            "id": "rtb-0d7cbc8cc8095c870",
            "owner_id": "339712886638",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01487500b20147c34",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aerowise-t1-private-rtb-c"
            },
            "tags_all": {
              "Name": "aerowise-t1-private-rtb-c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "rtb-0d7cbc8cc8095c870",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:route-table/rtb-0b0364ece8d23921d",
            "id": "rtb-0b0364ece8d23921d",
            "owner_id": "339712886638",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e91adf551f04ed6f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aerowise-t1-public-rtb"
            },
            "tags_all": {
              "Name": "aerowise-t1-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "rtb-0b0364ece8d23921d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6c3a0915f666819",
            "region": "us-east-1",
            "route_table_id": "rtb-0c903f3aa9a8e5a47",
            "subnet_id": "subnet-09bb2fe342f542bd4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6594140633b5589",
            "region": "us-east-1",
            "route_table_id": "rtb-08f34a08baed6947d",
            "subnet_id": "subnet-03ba1a05e579fbfaa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2d3449c7d51f223",
            "region": "us-east-1",
            "route_table_id": "rtb-0d7cbc8cc8095c870",
            "subnet_id": "subnet-02f3984c2237db7f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f1df0ebc812cecc",
            "region": "us-east-1",
            "route_table_id": "rtb-0b0364ece8d23921d",
            "subnet_id": "subnet-040508a7224118551"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c71a40122b90086",
            "region": "us-east-1",
            "route_table_id": "rtb-0b0364ece8d23921d",
            "subnet_id": "subnet-05c29cc4ed9d2be74"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:security-group/sg-037b6f58452ca5e17",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037b6f58452ca5e17",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aerowise-t1-alb-sg-20251228030826499600000006",
            "name_prefix": "aerowise-t1-alb-sg-",
            "owner_id": "339712886638",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aerowise-t1-alb-sg"
            },
            "tags_all": {
              "Name": "aerowise-t1-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "sg-037b6f58452ca5e17",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:security-group/sg-03e7c5142da14eb14",
            "description": "API Gateway VPC Link to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e7c5142da14eb14",
            "ingress": [],
            "name": "aerowise-t1-vpc-link-sg-20251228030826496800000005",
            "name_prefix": "aerowise-t1-vpc-link-sg-",
            "owner_id": "339712886638",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aerowise-t1-vpc-link-sg"
            },
            "tags_all": {
              "Name": "aerowise-t1-vpc-link-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "sg-03e7c5142da14eb14",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:subnet/subnet-09bb2fe342f542bd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bb2fe342f542bd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712886638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aerowise-t1-private-app-a",
              "kubernetes.io/cluster/aerowise-t1-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "aerowise-t1-private-app-a",
              "kubernetes.io/cluster/aerowise-t1-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "subnet-09bb2fe342f542bd4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:subnet/subnet-03ba1a05e579fbfaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ba1a05e579fbfaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712886638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aerowise-t1-private-app-b",
              "kubernetes.io/cluster/aerowise-t1-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "aerowise-t1-private-app-b",
              "kubernetes.io/cluster/aerowise-t1-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "subnet-03ba1a05e579fbfaa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:subnet/subnet-02f3984c2237db7f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f3984c2237db7f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712886638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aerowise-t1-private-app-c",
              "kubernetes.io/cluster/aerowise-t1-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "aerowise-t1-private-app-c",
              "kubernetes.io/cluster/aerowise-t1-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "subnet-02f3984c2237db7f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:subnet/subnet-040508a7224118551",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040508a7224118551",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712886638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aerowise-t1-public-a",
              "kubernetes.io/cluster/aerowise-t1-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "aerowise-t1-public-a",
              "kubernetes.io/cluster/aerowise-t1-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "subnet-040508a7224118551",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:subnet/subnet-05c29cc4ed9d2be74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c29cc4ed9d2be74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712886638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aerowise-t1-public-b",
              "kubernetes.io/cluster/aerowise-t1-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "aerowise-t1-public-b",
              "kubernetes.io/cluster/aerowise-t1-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "subnet-05c29cc4ed9d2be74",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:vpc/vpc-0aa1080e771ac39e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074c556febcca670b",
            "default_route_table_id": "rtb-05201219f36c61b0b",
            "default_security_group_id": "sg-02baa0c784b5b7aa6",
            "dhcp_options_id": "dopt-001b1d48125fba91c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa1080e771ac39e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05201219f36c61b0b",
            "owner_id": "339712886638",
            "region": "us-east-1",
            "tags": {
              "Name": "aerowise-t1-vpc"
            },
            "tags_all": {
              "Name": "aerowise-t1-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "vpc-0aa1080e771ac39e2",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.network_endpoints",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:security-group/sg-0fee4cb40803f80b0",
            "description": "Allow EKS nodes to reach AWS VPC interface endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fee4cb40803f80b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24"
                ],
                "description": "HTTPS from private subnet CIDR",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.11.0/24"
                ],
                "description": "HTTPS from private subnet CIDR",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.12.0/24"
                ],
                "description": "HTTPS from private subnet CIDR",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aerowise-t1-vpce-sg",
            "name_prefix": "",
            "owner_id": "339712886638",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aerowise-t1-vpce-sg"
            },
            "tags_all": {
              "Name": "aerowise-t1-vpce-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "sg-0fee4cb40803f80b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:vpc-endpoint/vpce-057579e860faa9c3b",
            "dns_entry": [
              {
                "dns_name": "vpce-057579e860faa9c3b-wxygi2bj.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-057579e860faa9c3b-wxygi2bj-us-east-1c.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-057579e860faa9c3b-wxygi2bj-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-057579e860faa9c3b-wxygi2bj-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08590962NKEUOUIE43RZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-057579e860faa9c3b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-045931c2e0c5df9fc",
              "eni-0bd21f2b2245d3c66",
              "eni-0f12d1fc53795fd1e"
            ],
            "owner_id": "339712886638",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0fee4cb40803f80b0"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.250",
                "subnet_id": "subnet-09bb2fe342f542bd4"
              },
              {
                "ipv4": "10.0.11.156",
                "subnet_id": "subnet-03ba1a05e579fbfaa"
              },
              {
                "ipv4": "10.0.12.239",
                "subnet_id": "subnet-02f3984c2237db7f7"
              }
            ],
            "subnet_ids": [
              "subnet-02f3984c2237db7f7",
              "subnet-03ba1a05e579fbfaa",
              "subnet-09bb2fe342f542bd4"
            ],
            "tags": {
              "Name": "aerowise-t1-ec2messages"
            },
            "tags_all": {
              "Name": "aerowise-t1-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "vpce-057579e860faa9c3b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "module": "module.network_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:vpc-endpoint/vpce-041f30d35b67fbad1",
            "dns_entry": [
              {
                "dns_name": "vpce-041f30d35b67fbad1-1kkqvmqw.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-041f30d35b67fbad1-1kkqvmqw-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-041f30d35b67fbad1-1kkqvmqw-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-041f30d35b67fbad1-1kkqvmqw-us-east-1c.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0994323IJRKY6MBCE2Y"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z04222855DLXGJ1TJPJ4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-041f30d35b67fbad1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-013262d519dd67133",
              "eni-04be2f874d5fb5aed",
              "eni-0e045e09ac41fa546"
            ],
            "owner_id": "339712886638",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0fee4cb40803f80b0"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.131",
                "subnet_id": "subnet-09bb2fe342f542bd4"
              },
              {
                "ipv4": "10.0.11.99",
                "subnet_id": "subnet-03ba1a05e579fbfaa"
              },
              {
                "ipv4": "10.0.12.206",
                "subnet_id": "subnet-02f3984c2237db7f7"
              }
            ],
            "subnet_ids": [
              "subnet-02f3984c2237db7f7",
              "subnet-03ba1a05e579fbfaa",
              "subnet-09bb2fe342f542bd4"
            ],
            "tags": {
              "Name": "aerowise-t1-ecr-api"
            },
            "tags_all": {
              "Name": "aerowise-t1-ecr-api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "vpce-041f30d35b67fbad1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "module": "module.network_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:vpc-endpoint/vpce-05381409e0c5b4297",
            "dns_entry": [
              {
                "dns_name": "vpce-05381409e0c5b4297-p661z2ph.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05381409e0c5b4297-p661z2ph-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05381409e0c5b4297-p661z2ph-us-east-1c.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05381409e0c5b4297-p661z2ph-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08578353MTKT4LA1VUGT"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08578353MTKT4LA1VUGT"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z0991720V8MXRCWC0YJ5"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z0991720V8MXRCWC0YJ5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05381409e0c5b4297",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02788c29b038467b0",
              "eni-0414f58f12804ff12",
              "eni-0807713033792d833"
            ],
            "owner_id": "339712886638",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0fee4cb40803f80b0"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.132",
                "subnet_id": "subnet-09bb2fe342f542bd4"
              },
              {
                "ipv4": "10.0.11.141",
                "subnet_id": "subnet-03ba1a05e579fbfaa"
              },
              {
                "ipv4": "10.0.12.30",
                "subnet_id": "subnet-02f3984c2237db7f7"
              }
            ],
            "subnet_ids": [
              "subnet-02f3984c2237db7f7",
              "subnet-03ba1a05e579fbfaa",
              "subnet-09bb2fe342f542bd4"
            ],
            "tags": {
              "Name": "aerowise-t1-ecr-dkr"
            },
            "tags_all": {
              "Name": "aerowise-t1-ecr-dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "vpce-05381409e0c5b4297",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "module": "module.network_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.network_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:vpc-endpoint/vpce-0742bdc70383425fa",
            "dns_entry": [
              {
                "dns_name": "vpce-0742bdc70383425fa-sq4aogx3.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0742bdc70383425fa-sq4aogx3-us-east-1c.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0742bdc70383425fa-sq4aogx3-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0742bdc70383425fa-sq4aogx3-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0411905SR1XCYA57U7U"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08472921NBV8G6POTMZP"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0992506SVNG4KY8DYC"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z08458392EXGQ3DAZWCY4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0742bdc70383425fa",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02c3f694d5c87ce4c",
              "eni-04fa1d9c883c408ad",
              "eni-0c45cb303377a45b8"
            ],
            "owner_id": "339712886638",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0fee4cb40803f80b0"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.63",
                "subnet_id": "subnet-09bb2fe342f542bd4"
              },
              {
                "ipv4": "10.0.11.82",
                "subnet_id": "subnet-03ba1a05e579fbfaa"
              },
              {
                "ipv4": "10.0.12.199",
                "subnet_id": "subnet-02f3984c2237db7f7"
              }
            ],
            "subnet_ids": [
              "subnet-02f3984c2237db7f7",
              "subnet-03ba1a05e579fbfaa",
              "subnet-09bb2fe342f542bd4"
            ],
            "tags": {
              "Name": "aerowise-t1-logs"
            },
            "tags_all": {
              "Name": "aerowise-t1-logs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "vpce-0742bdc70383425fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "module": "module.network_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:vpc-endpoint/vpce-0dcea814624b039d9",
            "dns_entry": [
              {
                "dns_name": "vpce-0dcea814624b039d9-8umk5nnm.monitoring.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dcea814624b039d9-8umk5nnm-us-east-1c.monitoring.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dcea814624b039d9-8umk5nnm-us-east-1b.monitoring.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dcea814624b039d9-8umk5nnm-us-east-1a.monitoring.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "monitoring.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08576823RWYD1HZZTYDL"
              },
              {
                "dns_name": "monitoring.us-east-1.api.aws",
                "hosted_zone_id": "Z08458772037HI66FX7PV"
              },
              {
                "dns_name": "monitoring-fips.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z085768435QNX2FZ29ERP"
              },
              {
                "dns_name": "monitoring-fips.us-east-1.api.aws",
                "hosted_zone_id": "Z08449361OUJDLYMZYF5W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0dcea814624b039d9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00e00758c854fe9dc",
              "eni-0413d05c51848ae34",
              "eni-0f47e456b72a624b2"
            ],
            "owner_id": "339712886638",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0fee4cb40803f80b0"
            ],
            "service_name": "com.amazonaws.us-east-1.monitoring",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.116",
                "subnet_id": "subnet-09bb2fe342f542bd4"
              },
              {
                "ipv4": "10.0.11.108",
                "subnet_id": "subnet-03ba1a05e579fbfaa"
              },
              {
                "ipv4": "10.0.12.16",
                "subnet_id": "subnet-02f3984c2237db7f7"
              }
            ],
            "subnet_ids": [
              "subnet-02f3984c2237db7f7",
              "subnet-03ba1a05e579fbfaa",
              "subnet-09bb2fe342f542bd4"
            ],
            "tags": {
              "Name": "aerowise-t1-monitoring"
            },
            "tags_all": {
              "Name": "aerowise-t1-monitoring"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "vpce-0dcea814624b039d9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "module": "module.network_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:vpc-endpoint/vpce-0869721877bd01fdb",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0869721877bd01fdb",
            "ip_address_type": "ipv4",
            "owner_id": "339712886638",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-08f34a08baed6947d",
              "rtb-0c903f3aa9a8e5a47",
              "rtb-0d7cbc8cc8095c870"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "aerowise-t1-s3"
            },
            "tags_all": {
              "Name": "aerowise-t1-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "vpce-0869721877bd01fdb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:vpc-endpoint/vpce-0e39b93b19196eea3",
            "dns_entry": [
              {
                "dns_name": "vpce-0e39b93b19196eea3-r46c03k4.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e39b93b19196eea3-r46c03k4-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e39b93b19196eea3-r46c03k4-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e39b93b19196eea3-r46c03k4-us-east-1c.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08565382Z16CNFBH7V87"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e39b93b19196eea3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-015e2e4ab96d00ff5",
              "eni-0528bc91e9481b105",
              "eni-0d39d3dafef1a6e89"
            ],
            "owner_id": "339712886638",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0fee4cb40803f80b0"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.249",
                "subnet_id": "subnet-09bb2fe342f542bd4"
              },
              {
                "ipv4": "10.0.11.96",
                "subnet_id": "subnet-03ba1a05e579fbfaa"
              },
              {
                "ipv4": "10.0.12.149",
                "subnet_id": "subnet-02f3984c2237db7f7"
              }
            ],
            "subnet_ids": [
              "subnet-02f3984c2237db7f7",
              "subnet-03ba1a05e579fbfaa",
              "subnet-09bb2fe342f542bd4"
            ],
            "tags": {
              "Name": "aerowise-t1-secretsmanager"
            },
            "tags_all": {
              "Name": "aerowise-t1-secretsmanager"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "vpce-0e39b93b19196eea3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "module": "module.network_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:vpc-endpoint/vpce-075eddabbbf8f9bb0",
            "dns_entry": [
              {
                "dns_name": "vpce-075eddabbbf8f9bb0-xxkrigl5.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-075eddabbbf8f9bb0-xxkrigl5-us-east-1c.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-075eddabbbf8f9bb0-xxkrigl5-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-075eddabbbf8f9bb0-xxkrigl5-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08565002KED1FEAL6FY"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z04119335VUTYQRAGRNH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-075eddabbbf8f9bb0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0451de93a0c0d72d4",
              "eni-078d8fc7d0e8918ba",
              "eni-0e36b3ac613d8a8e9"
            ],
            "owner_id": "339712886638",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0fee4cb40803f80b0"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.26",
                "subnet_id": "subnet-09bb2fe342f542bd4"
              },
              {
                "ipv4": "10.0.11.129",
                "subnet_id": "subnet-03ba1a05e579fbfaa"
              },
              {
                "ipv4": "10.0.12.98",
                "subnet_id": "subnet-02f3984c2237db7f7"
              }
            ],
            "subnet_ids": [
              "subnet-02f3984c2237db7f7",
              "subnet-03ba1a05e579fbfaa",
              "subnet-09bb2fe342f542bd4"
            ],
            "tags": {
              "Name": "aerowise-t1-ssm"
            },
            "tags_all": {
              "Name": "aerowise-t1-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "vpce-075eddabbbf8f9bb0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "module": "module.network_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:vpc-endpoint/vpce-0988261364dac9754",
            "dns_entry": [
              {
                "dns_name": "vpce-0988261364dac9754-12jw75ro.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0988261364dac9754-12jw75ro-us-east-1c.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0988261364dac9754-12jw75ro-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0988261364dac9754-12jw75ro-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09925042ELE19L0T9KP"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z08574352S9XWRT508SID"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0988261364dac9754",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03990e10700187b35",
              "eni-0857cb7c5c99401d8",
              "eni-0adf9302503d4ddf9"
            ],
            "owner_id": "339712886638",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0fee4cb40803f80b0"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.92",
                "subnet_id": "subnet-09bb2fe342f542bd4"
              },
              {
                "ipv4": "10.0.11.243",
                "subnet_id": "subnet-03ba1a05e579fbfaa"
              },
              {
                "ipv4": "10.0.12.218",
                "subnet_id": "subnet-02f3984c2237db7f7"
              }
            ],
            "subnet_ids": [
              "subnet-02f3984c2237db7f7",
              "subnet-03ba1a05e579fbfaa",
              "subnet-09bb2fe342f542bd4"
            ],
            "tags": {
              "Name": "aerowise-t1-ssmmessages"
            },
            "tags_all": {
              "Name": "aerowise-t1-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "vpce-0988261364dac9754",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "module": "module.network_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:vpc-endpoint/vpce-039e9d5301fa93984",
            "dns_entry": [
              {
                "dns_name": "vpce-039e9d5301fa93984-cx6pr4j3.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-039e9d5301fa93984-cx6pr4j3-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-039e9d5301fa93984-cx6pr4j3-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-039e9d5301fa93984-cx6pr4j3-us-east-1c.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08565013H4T9AWUQJHYT"
              },
              {
                "dns_name": "sts.us-east-1.api.aws",
                "hosted_zone_id": "Z04135933EB5XOAEYUESQ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-039e9d5301fa93984",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03bd19ac04f1c04c8",
              "eni-072df8c82683e7b56",
              "eni-0d0402afc56496311"
            ],
            "owner_id": "339712886638",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0fee4cb40803f80b0"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.173",
                "subnet_id": "subnet-09bb2fe342f542bd4"
              },
              {
                "ipv4": "10.0.11.160",
                "subnet_id": "subnet-03ba1a05e579fbfaa"
              },
              {
                "ipv4": "10.0.12.87",
                "subnet_id": "subnet-02f3984c2237db7f7"
              }
            ],
            "subnet_ids": [
              "subnet-02f3984c2237db7f7",
              "subnet-03ba1a05e579fbfaa",
              "subnet-09bb2fe342f542bd4"
            ],
            "tags": {
              "Name": "aerowise-t1-sts"
            },
            "tags_all": {
              "Name": "aerowise-t1-sts"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "vpce-039e9d5301fa93984",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy_mobile",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mobileapp",
            "metadata": [
              {
                "generation": 0,
                "name": "mobileapp",
                "resource_version": "7637",
                "uid": "34b79516-b78e-447b-9ae2-37a811888fb7"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "mobileapp"
          },
          "dependencies": [
            "module.eks.aws_eks_addon.cloudwatch_observability",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.efs_csi",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.nodes",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKS_VPC_ResourceController",
            "module.eks.aws_iam_role_policy_attachment.nodes_cni",
            "module.eks.aws_iam_role_policy_attachment.nodes_ecr",
            "module.eks.aws_iam_role_policy_attachment.nodes_ssm",
            "module.eks.aws_iam_role_policy_attachment.nodes_worker",
            "module.eks.aws_security_group.nodes",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_to_nodes_kubelet",
            "module.eks.aws_security_group_rule.nodes_to_nodes",
            "module.nat_egress_control.aws_security_group.nategress",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce",
            "module.network_endpoints.aws_vpc_endpoint.ec2messages",
            "module.network_endpoints.aws_vpc_endpoint.ecr_api",
            "module.network_endpoints.aws_vpc_endpoint.ecr_dkr",
            "module.network_endpoints.aws_vpc_endpoint.ecr_public",
            "module.network_endpoints.aws_vpc_endpoint.logs",
            "module.network_endpoints.aws_vpc_endpoint.monitoring",
            "module.network_endpoints.aws_vpc_endpoint.s3",
            "module.network_endpoints.aws_vpc_endpoint.secretsmanager",
            "module.network_endpoints.aws_vpc_endpoint.ssm",
            "module.network_endpoints.aws_vpc_endpoint.ssmmessages",
            "module.network_endpoints.aws_vpc_endpoint.sts"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy_mobile",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "calico",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "calico-system",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "name": "calico-system"
                },
                "name": "calico-system",
                "resource_version": "21136",
                "uid": "ba7edfac-3ada-4ee9-aa41-9b0dd6bc48fe"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "calico-system"
          },
          "dependencies": [
            "module.eks.aws_eks_addon.cloudwatch_observability",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.efs_csi",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.nodes",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKS_VPC_ResourceController",
            "module.eks.aws_iam_role_policy_attachment.nodes_cni",
            "module.eks.aws_iam_role_policy_attachment.nodes_ecr",
            "module.eks.aws_iam_role_policy_attachment.nodes_ssm",
            "module.eks.aws_iam_role_policy_attachment.nodes_worker",
            "module.eks.aws_security_group.nodes",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_to_nodes_kubelet",
            "module.eks.aws_security_group_rule.nodes_to_nodes",
            "module.nat_egress_control.aws_security_group.nategress",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce",
            "module.network_endpoints.aws_vpc_endpoint.ec2messages",
            "module.network_endpoints.aws_vpc_endpoint.ecr_api",
            "module.network_endpoints.aws_vpc_endpoint.ecr_dkr",
            "module.network_endpoints.aws_vpc_endpoint.ecr_public",
            "module.network_endpoints.aws_vpc_endpoint.logs",
            "module.network_endpoints.aws_vpc_endpoint.monitoring",
            "module.network_endpoints.aws_vpc_endpoint.s3",
            "module.network_endpoints.aws_vpc_endpoint.secretsmanager",
            "module.network_endpoints.aws_vpc_endpoint.ssm",
            "module.network_endpoints.aws_vpc_endpoint.ssmmessages",
            "module.network_endpoints.aws_vpc_endpoint.sts"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy_mobile",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_app_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mobileapp/allow-app-to-db",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-app-to-db",
                "namespace": "mobileapp",
                "resource_version": "8105",
                "uid": "70b01a68-2470-4a85-b38f-d11cf9e2c3a9"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "5432",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [
                          {
                            "cidr": "10.0.10.0/16",
                            "except": []
                          }
                        ],
                        "namespace_selector": [],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-app-to-db",
            "namespace": "mobileapp"
          },
          "dependencies": [
            "module.eks.aws_eks_addon.cloudwatch_observability",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.efs_csi",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.nodes",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKS_VPC_ResourceController",
            "module.eks.aws_iam_role_policy_attachment.nodes_cni",
            "module.eks.aws_iam_role_policy_attachment.nodes_ecr",
            "module.eks.aws_iam_role_policy_attachment.nodes_ssm",
            "module.eks.aws_iam_role_policy_attachment.nodes_worker",
            "module.eks.aws_security_group.nodes",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_to_nodes_kubelet",
            "module.eks.aws_security_group_rule.nodes_to_nodes",
            "module.nat_egress_control.aws_security_group.nategress",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce",
            "module.network_endpoints.aws_vpc_endpoint.ec2messages",
            "module.network_endpoints.aws_vpc_endpoint.ecr_api",
            "module.network_endpoints.aws_vpc_endpoint.ecr_dkr",
            "module.network_endpoints.aws_vpc_endpoint.ecr_public",
            "module.network_endpoints.aws_vpc_endpoint.logs",
            "module.network_endpoints.aws_vpc_endpoint.monitoring",
            "module.network_endpoints.aws_vpc_endpoint.s3",
            "module.network_endpoints.aws_vpc_endpoint.secretsmanager",
            "module.network_endpoints.aws_vpc_endpoint.ssm",
            "module.network_endpoints.aws_vpc_endpoint.ssmmessages",
            "module.network_endpoints.aws_vpc_endpoint.sts",
            "module.network_policy_mobile.helm_release.calico",
            "module.network_policy_mobile.kubernetes_namespace.app",
            "module.network_policy_mobile.kubernetes_namespace.calico"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy_mobile",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mobileapp/allow-dns",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-dns",
                "namespace": "mobileapp",
                "resource_version": "8106",
                "uid": "9b7ec030-8708-4558-9884-3a2196c64965"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      },
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-dns",
            "namespace": "mobileapp"
          },
          "dependencies": [
            "module.eks.aws_eks_addon.cloudwatch_observability",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.efs_csi",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.nodes",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKS_VPC_ResourceController",
            "module.eks.aws_iam_role_policy_attachment.nodes_cni",
            "module.eks.aws_iam_role_policy_attachment.nodes_ecr",
            "module.eks.aws_iam_role_policy_attachment.nodes_ssm",
            "module.eks.aws_iam_role_policy_attachment.nodes_worker",
            "module.eks.aws_security_group.nodes",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_to_nodes_kubelet",
            "module.eks.aws_security_group_rule.nodes_to_nodes",
            "module.nat_egress_control.aws_security_group.nategress",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce",
            "module.network_endpoints.aws_vpc_endpoint.ec2messages",
            "module.network_endpoints.aws_vpc_endpoint.ecr_api",
            "module.network_endpoints.aws_vpc_endpoint.ecr_dkr",
            "module.network_endpoints.aws_vpc_endpoint.ecr_public",
            "module.network_endpoints.aws_vpc_endpoint.logs",
            "module.network_endpoints.aws_vpc_endpoint.monitoring",
            "module.network_endpoints.aws_vpc_endpoint.s3",
            "module.network_endpoints.aws_vpc_endpoint.secretsmanager",
            "module.network_endpoints.aws_vpc_endpoint.ssm",
            "module.network_endpoints.aws_vpc_endpoint.ssmmessages",
            "module.network_endpoints.aws_vpc_endpoint.sts",
            "module.network_policy_mobile.helm_release.calico",
            "module.network_policy_mobile.kubernetes_namespace.app",
            "module.network_policy_mobile.kubernetes_namespace.calico"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy_mobile",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_https_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mobileapp/allow-https-egress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-https-egress",
                "namespace": "mobileapp",
                "resource_version": "8108",
                "uid": "10517915-ddd3-48ce-8812-690f2a780cd8"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "443",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [
                          {
                            "cidr": "0.0.0.0/0",
                            "except": []
                          }
                        ],
                        "namespace_selector": [],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-https-egress",
            "namespace": "mobileapp"
          },
          "dependencies": [
            "module.eks.aws_eks_addon.cloudwatch_observability",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.efs_csi",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.nodes",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKS_VPC_ResourceController",
            "module.eks.aws_iam_role_policy_attachment.nodes_cni",
            "module.eks.aws_iam_role_policy_attachment.nodes_ecr",
            "module.eks.aws_iam_role_policy_attachment.nodes_ssm",
            "module.eks.aws_iam_role_policy_attachment.nodes_worker",
            "module.eks.aws_security_group.nodes",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_to_nodes_kubelet",
            "module.eks.aws_security_group_rule.nodes_to_nodes",
            "module.nat_egress_control.aws_security_group.nategress",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce",
            "module.network_endpoints.aws_vpc_endpoint.ec2messages",
            "module.network_endpoints.aws_vpc_endpoint.ecr_api",
            "module.network_endpoints.aws_vpc_endpoint.ecr_dkr",
            "module.network_endpoints.aws_vpc_endpoint.ecr_public",
            "module.network_endpoints.aws_vpc_endpoint.logs",
            "module.network_endpoints.aws_vpc_endpoint.monitoring",
            "module.network_endpoints.aws_vpc_endpoint.s3",
            "module.network_endpoints.aws_vpc_endpoint.secretsmanager",
            "module.network_endpoints.aws_vpc_endpoint.ssm",
            "module.network_endpoints.aws_vpc_endpoint.ssmmessages",
            "module.network_endpoints.aws_vpc_endpoint.sts",
            "module.network_policy_mobile.helm_release.calico",
            "module.network_policy_mobile.kubernetes_namespace.app",
            "module.network_policy_mobile.kubernetes_namespace.calico"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy_mobile",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_vpc_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mobileapp/allow-vpc-to-app",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-vpc-to-app",
                "namespace": "mobileapp",
                "resource_version": "8107",
                "uid": "db7a9e35-c98a-41e9-aa4d-5f7c5888b604"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [
                          {
                            "cidr": "10.0.0.0/16",
                            "except": []
                          }
                        ],
                        "namespace_selector": [],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "80",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-vpc-to-app",
            "namespace": "mobileapp"
          },
          "dependencies": [
            "module.eks.aws_eks_addon.cloudwatch_observability",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.efs_csi",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.nodes",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKS_VPC_ResourceController",
            "module.eks.aws_iam_role_policy_attachment.nodes_cni",
            "module.eks.aws_iam_role_policy_attachment.nodes_ecr",
            "module.eks.aws_iam_role_policy_attachment.nodes_ssm",
            "module.eks.aws_iam_role_policy_attachment.nodes_worker",
            "module.eks.aws_security_group.nodes",
            "module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.eks.aws_security_group_rule.cluster_to_nodes_kubelet",
            "module.eks.aws_security_group_rule.nodes_to_nodes",
            "module.nat_egress_control.aws_security_group.nategress",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce",
            "module.network_endpoints.aws_vpc_endpoint.ec2messages",
            "module.network_endpoints.aws_vpc_endpoint.ecr_api",
            "module.network_endpoints.aws_vpc_endpoint.ecr_dkr",
            "module.network_endpoints.aws_vpc_endpoint.ecr_public",
            "module.network_endpoints.aws_vpc_endpoint.logs",
            "module.network_endpoints.aws_vpc_endpoint.monitoring",
            "module.network_endpoints.aws_vpc_endpoint.s3",
            "module.network_endpoints.aws_vpc_endpoint.secretsmanager",
            "module.network_endpoints.aws_vpc_endpoint.ssm",
            "module.network_endpoints.aws_vpc_endpoint.ssmmessages",
            "module.network_endpoints.aws_vpc_endpoint.sts",
            "module.network_policy_mobile.helm_release.calico",
            "module.network_policy_mobile.kubernetes_namespace.app",
            "module.network_policy_mobile.kubernetes_namespace.calico"
          ]
        }
      ]
    },
    {
      "module": "module.rds_postgres",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712886638:security-group/sg-0b5deb63c444e4e89",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5deb63c444e4e89",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL access from EKS worker nodes",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c22506a805ce5d82"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aerowise-t1-rds-sg",
            "name_prefix": "",
            "owner_id": "339712886638",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "aerowise-t1-rds"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aerowise-t1-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa1080e771ac39e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "339712886638",
            "id": "sg-0b5deb63c444e4e89",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.eks.aws_security_group.nodes",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.vpc_link",
            "module.network.aws_subnet.private_app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network_endpoints.aws_security_group.vpce",
            "module.network_endpoints.aws_vpc_endpoint.ec2messages",
            "module.network_endpoints.aws_vpc_endpoint.ecr_api",
            "module.network_endpoints.aws_vpc_endpoint.ecr_dkr",
            "module.network_endpoints.aws_vpc_endpoint.ecr_public",
            "module.network_endpoints.aws_vpc_endpoint.logs",
            "module.network_endpoints.aws_vpc_endpoint.monitoring",
            "module.network_endpoints.aws_vpc_endpoint.s3",
            "module.network_endpoints.aws_vpc_endpoint.secretsmanager",
            "module.network_endpoints.aws_vpc_endpoint.ssm",
            "module.network_endpoints.aws_vpc_endpoint.ssmmessages",
            "module.network_endpoints.aws_vpc_endpoint.sts"
          ]
        }
      ]
    }
  ]
}